2009-09-09  Sancho Lerena <slerena@artica.es>

	* operation/agentes/estado_monitores.php: Main view now also show last
	data and a quick links to today graphs and data view. This feature has
	been added because was requested by some users, and we think it's really
	useful.
	
2009-09-09  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/estado_agente.php: add ajax request for actions.
	* godmode/alerts/alert_list.php: change the checkboxs for a ajax
	select for actions. And fix messages when you try make two times the same
	alert.
	Fixes: 2843852

2009-09-09  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora_modules.js: clean code.
	* include/javascript/pandora.js: fix bug in ie6 that it remove the "\n".


2009-09-09  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_network_components.php: add bool param $localComponent
	for to filter the tree when it's a local component.

2009-09-09  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/massive_edit_modules.php: add the last required field
	(Export) in the form.
	Fixes: 2848951

2009-09-09  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/massive_edit_modules.php: add more (user and pass for
	wmi or plugin) fields to massive edit.

2009-09-09  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: add new function "get_all_groups", this function
	return all groups.
	* operation/agentes/ver_agente.php: add another code block for to respond
	new ajax request (new select in form massive_edit_modules.php).
	* godmode/agentes/massive_edit_modules.php: Fix in part bug #2848951 in
	tracker sourceforge, rest things for to do is add more fields.

2009-09-07  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/massive_edit_modules.php: now the select of
	Module name have got all modules but you can filter in the select of
	Module type. Fix in part bug #2848951 in tracker sourceforge, exactly
	the first paragraph of bug.
	